# Solo

./: .bandit  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  Solo - System Architecture Concept.md  docker-compose.test.yml  docker-compose.yml  dockerfile.postgres  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yml
app/: config.py  main.py
app/api/: dependencies.py  factory.py  server.py
app/api/middleware/: __init__.py  auth_middleware.py
app/api/routes/: config_endpoint.py  conversations_endpoint.py  llm_endpoint.py  metrics_endpoint.py  models.py  models_endpoint.py  users_endpoint.py
app/core/: agent_bus.py  db_service.py  llm_demo.py  llm_runner.py  llm_service.py  llm_tester.py  memory.py  model_cache.py  model_info.py  model_manager.py  model_service.py  prompt_templates.py  stt.py  tts.py  wake_word.py
app/core/db/: __init__.py  big_brother.py  connection.py  metrics_db.py  models_db.py  users_db.py
app/ui/: dashboard_app.py
app/utils/: events.py  logger.py
docs/: AGENTS.md  API_REFERENCE.md  DATABASE_DESIGN.md  DEVELOPMENT_STATUS.md  Docker compose cheatsheet.md  SQL cheatsheet.md  Solo - System Architecture Concept.md  USING_LLM_FEATURES.md
docs/Agents/: sketch_Agent_Architecture.md
docs/DB/: DATABASE_DESIGN.md  Docker compose cheatsheet.md
docs/DB/PG/: COMMON_QUERIES.md  DATABASE_DESIGN.md  DATABASE_INTEGRATION.md  POSTGRES_SETUP.md  SQL cheatsheet.md
docs/cheatsheets/: USING_LLM_FEATURES.md
scripts/: build_llama_cpp.ps1  cleanup-dev.ps1  dev.ps1  downl_model.ps1  run_DBContainer.ps1  run_agent.ps1  security-check.ps1  setup-dev.ps1
scripts/DockerInit/: 00-init-db.sh
scripts/SQL/: Solo_DB.sql
scripts/db/: backup-db.ps1  restore-db.ps1  run_DBContainer.ps1  schedule-backups.ps1
scripts/model/: downl_model.ps1
scripts/postgres/: postgresql.conf
scripts/postgresql/: postgresql.conf
scripts/postgresql/init-scripts/: 11-Solo_DB.sql
scripts/setup/: apply-db-migrations.ps1  cleanup-dev.ps1  setup-SoloDB.ps1  setup-dev.ps1  setup-test-env.ps1
tests/: TESTING_GUIDE.md  TESTING_STRATEGY.md  conftest.py  run_tests.py  test_api_auth.ps1  test_auth_endpoints.ps1  test_endpoints.py  test_solo.ps1
tests/archive/: te1st_endpoints.py  test_api_auth.ps1  test_db.py
tests/end2end/: test_api_flow.py
tests/integration/: test_api_endpoints.py  test_db_services.py  test_event_bus_llm_runner.py
tests/performance/: test_api_performance.py  test_llm_performance.py
tests/security/: test_authentication_security.py
tests/unit/: test_config.py  test_events.py  test_model_manager.py
