[tool.poetry]
name = "Solo"
version = "0.0.1"
description = "Solo - just another AI Assistant"
authors = ["Stefan Ploch <stefanploch00@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]                              # - Runtime
python = ">=3.11,<=3.13"
fastapi = "0.109.2"                                     # FastAPI
uvicorn = {extras = ["standard"], version = "^0.30"}    # WebServer for FastAPI, could be handled by "fastapi[standard]"
streamlit = "^1.35"                                     # dashboard
llama-cpp-python = {version="^0.2.70", extras=["cuda"]} # GPU LLM backend
ctranslate2 = {version = "^4.4"}                        # faster-whisper core
faster-whisper = "^1.0.1"                               # STT wrapper
piper-tts = "^1.1.0"                                    # local TTS
pvporcupine = "^3.0.0"                                  # wake-word
chromadb = "^0.4.24"                                    # vector store
crewai = "^0.22"                                        # multi-agent bus
python-dotenv = "^1.0"
structlog = "^24.1"
pydantic = "^2.7"
email-validator = "^2.1.0"                              # Required for pydantic's EmailStr
aioconsole = "^0.8.1"
asyncpg = "^0.29.0"
argon2-cffi = "^23.1.0"                                 # For password hashing
pyotp = "^2.9.0"                                        # MFA

[tool.poetry.group.dev.dependencies]                    # - DEV + CI
black = "^24.4"
pytest = "^8.2"
pre-commit = "^3.7"
pytest-asyncio = "^0.24"
python-dotenv = "^1.1.0"
pytest-cov = "^4.1"
pytest-httpserver = "^1.0"
pytest-benchmark = "^4.0"
testcontainers = "^3.7"
psutil = "^5.9"
locust = "^2.24"
bandit = "^1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
